# autodraw

./: .gitignore  AGENTS.md  README.md  biome.json  package.json  pnpm-lock.yaml
.cursor/plans/: onboarding-and-mcp-docs_a765f372.plan.md
.github/workflows/: cli-publish.yaml  web-ci.yaml
apps/app/: .env.example  index.html  license.html  package.json  tsconfig.json  vite.config.ts
apps/app/scripts/: tauri-dev.mjs
apps/app/src/: license-main.tsx  main.tsx  vite-env.d.ts
apps/app/src-tauri/: Cargo.toml  tauri.conf.json
apps/app/src-tauri/capabilities/: default.json
apps/app/src-tauri/icons/: icon.icns
apps/app/src-tauri/src/: commands.rs  lib.rs
apps/app/src/editor/: EditorShell.tsx
apps/app/src/licensing/: ActivationGate.tsx  LicenseWindowRoot.tsx  MainAwaitLicense.tsx  licenseStorage.test.ts  licenseWindowOrchestration.ts  polarClient.ts  useLicense.test.ts
apps/app/src/test/: memoryLocalStorage.ts
apps/cli/: SKILL.md  oclif.manifest.json  package.json  tsconfig.json
apps/cli/src/: cli.test.ts
apps/cli/src/commands/: export.ts  init.ts  open.ts  (+1 more)
apps/core/: package.json
apps/core/src/: frameTokens.ts  index.ts  nodeColors.test.ts  nodeColors.ts  palettes.ts  renderer.ts  routing.ts  schema.test.ts  schema.ts
apps/editor/: components.json  package.json  tsconfig.json
apps/editor/src/: index.ts  sharePayload.test.ts  sharePayload.ts
apps/mcp/: README.md  package.json
apps/mcp/src/: index.ts  io.ts  tools.ts
apps/web/: .dev.vars.example  .gitignore  README.md  astro.config.mjs  biome.json  wrangler.jsonc
scripts/: dev-tauri.mjs
(+95 files in other folders)
