[package]
name = "autodraw"
version = "0.1.0"
description = "Autodraw"
authors = ["Christoph Biering"]
edition = "2021"

[lib]
name = "autodraw_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
urlencoding = "2"
# Keep usvg/resvg on the same major line as svg2pdf (it re-exports `usvg::Tree` for `to_pdf`).
usvg = "0.45"
svg2pdf = "0.13"
resvg = "0.45"
